feat: reply update e delete